test/Fail/DontPrune.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _8 (A = A) false a b = b : A (blocked on _8)
  _8 (A = A) true a b = a : A (blocked on _8)

DontPrune.agda:12.12-15.25: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  DontPrune.agda:12.12-13
  DontPrune.agda:15.14-18
  DontPrune.agda:15.21-25
